--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta name="viewport" content="width=device-width" />
- <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title> 
+    <!-- add bootstrap from the CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> 
+    <!-- additional custom styles. -->
+    <link rel="stylesheet" href="~/css/style.css" />
+
 </head>
 <body>
- <div>
- <h1>Hello from the layout!</h1>
- @RenderBody()
- </div>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Fisher Insurance</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Auto" asp-action="Index">Auto</a></li>
+                    <li><a asp-area="" asp-controller="Homeowners" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Life" asp-action="Index">Life</a></li>
+                    <li><a asp-area="" asp-controller="CustomerCare" asp-action="NewClaim">File a Claim</a></li>
+                    <li><a asp-area="" asp-controller="CustomerCare" asp-action="ClaimHistory">Claim Status</a></li>
+                    <!-- this  following link uses relative path instead of invoking the routing engine. -->
+                    <li><a href="~/claim/index">Customer Care</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; 2017 - Fisher Insurance</p>
+        </footer>
+    </div>
+
+    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js">
 </body>
 </html>
